Second bulk upload. Commits will be smaller!

--- a/source/common/header/header.html
+++ b/source/common/header/header.html
@@ -1,4 +1,4 @@
-<div class="container-full" style="padding-right:10px; padding-left:10px">
+<div class="container-full common-header" style="padding-right:10px; padding-left:10px">
     <div class="navbar-header">
 
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".ga-header-collapse">
@@ -8,8 +8,8 @@
             <span class="icon-bar"></span>
         </button>
 
-        <a href="http://www.ga.gov.au" class="hidden-xs"><img style="height:69"
-            src="icsm/resources/img/icsm-logo-sml.gif" alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="logo"></img></a>
+        <a href="http://www.ga.gov.au" class="hidden-xs header-logo">
+            <img src="icsm/resources/img/fsdf-logo.png" alt="ANZLIC the Spatial Information Council" class="logo"></img></a>
         <a href="http://www.ga.gov.au" class="visible-xs"><img src="icsm/resources/img/icsm-logo-sml.gif" alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="logo-stacked"></img></a>
         <a href="/" class="appTitle visible-xs"><h1 style="font-size:120%">{{heading}}</h1></a>
     </div>
