--- a/source/icsm/app/app.html
+++ b/source/icsm/app/app.html
@@ -1,12 +1,12 @@
 <div>
 	<!-- BEGIN: Sticky Header -->
-	<div explorer-header style="z-index:1" 
-			class="navbar navbar-default navbar-fixed-top" 
-			heading="'Explorer ICSM'"
+	<div explorer-header style="z-index:1"
+			class="navbar navbar-default navbar-fixed-top"
+			heading="'ELVIS – Foundation Spatial Data'"
 			headingtitle="'ICSM'"
-			breadcrumbs="[{name:'ICSM', title: 'Reload Explorer ICSM', url: '.'}]"
-			helptitle="'Get help about Explorer ICSM'"
-			helpalttext="'Get help about Explorer ICSM'">
+			breadcrumbs="[{name:'ICSM', title: 'Reload ELVIS – Foundation Spatial Data', url: '.'}]"
+			helptitle="'Get help about ELVIS – Foundation Spatial Data'"
+			helpalttext="'Get help about ELVIS – Foundation Spatial Data'">
 	</div>
 	<!-- END: Sticky Header -->
 
