--- a/source/icsm/splash/splash.html
+++ b/source/icsm/splash/splash.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-   <h3 class="modal-title splash">Explorer ICSM</h3>
+   <h3 class="modal-title splash">ELVIS – Foundation Spatial Data</h3>
 </div>
 <div class="modal-body" id="accept" ng-form exp-enter="accept()" icsm-splash-modal style="width: 100%; margin-left: auto; margin-right: auto;">
 	<div>
