Get rid of ELVIs from start page.

--- a/source/start/navigation/navigation.html
+++ b/source/start/navigation/navigation.html
@@ -3,7 +3,7 @@
       <div class="panel-body">
          <div class="row">
             <div class="col-md-2">
-               <button ng-attr-title="{{item.title}}" class="select-icon select-{{item.code}}"></button>
+               <button ng-attr-title="{{item.title}}"><span class="select-icon select-{{item.code}}"></span></button>
             </div>
             <div class="col-md-8">
                <h3>{{item.label}}</h3>
