Shuffle html names around for better UX.

--- a/source/start/navigation/navigation.html
+++ b/source/start/navigation/navigation.html
@@ -1,5 +1,5 @@
 <div class="container-fluid start-content-container">
-   <div class="panel panel-default" ng-repeat="item in data.themes">
+   <div class="panel panel-default" ng-repeat="item in themes">
       <div class="panel-body">
          <div class="row">
             <div class="col-md-2">
