--- a/source/icsm/list/list.html
+++ b/source/icsm/list/list.html
@@ -12,23 +12,19 @@
             <span class="input-group-addon" id="names1">Filter:</span>
             <input type="text" ng-model="filter" class="form-control"
                    ng-change="update()" placeholder="Filter names" aria-describedby="names1">
-            <span class="input-group-btn">
-               <button class="btn btn-primary" type="button" data-toggle="collapse" uib-tooltip="Filter by file content type"
-                     data-target="#collapseFilters" aria-expanded="false" aria-controls="collapseFilters">
-                  More...
-               </button>
-            </span>
          </div>
       </div>
    </div>
-   <div class="collapse" id="collapseFilters">
-      <div class="well">
-         <div class="row">
-            <span class="listTypeLabel">File type</span>
-            <span ng-repeat="type in filetypes" class="listType">
-               <input type="checkbox" ng-model="type.selected" ng-change="update()"/>
-               <span uib-tooltip="{{type.description}}">{{type.label}} ({{type.count}})</span>
-            </span>
+   <div class="row">
+      <div class="col-md-12">
+         <div class="panel panel-default">
+            <div class="panel-body">
+               <span class="listTypeLabel">Filter by type</span>
+               <span ng-repeat="type in filetypes" class="listType">
+                  <input type="checkbox" ng-model="type.selected" ng-change="update()"/>
+                  <span uib-tooltip="{{type.description}}">{{type.label}} ({{type.count}})</span>
+               </span>
+            </div>
          </div>
       </div>
    </div>
@@ -37,7 +33,7 @@
       <h5>
          <button class="undecorated" ng-click="expansions[available.source] = !expansions[available.source]" uib-tooltip="Click to collapse/expand this group"
                   aria-expanded="true" aria-controls="collapse{{mappings[available.source].code}}">
-            <img ng-src="{{mappings[available.source].image}}" style="height:{{mappings[available.source].height}}px"></img>
+            <img ng-src="{{mappings[available.source].image}}" ng-attr-style="height:{{mappings[available.source].height}}px"></img>
          </button>
          <strong>{{available.source}}</strong>
          (Showing {{available.downloadables.length}} of {{fullCount(available.source)}})
@@ -48,60 +44,74 @@
          </span>
       </h5>
       <div uib-collapse="!expansions[available.source]">
-         <div class="listRow" ng-class-odd="'listEven'" ng-repeat="item in available.downloadables"
-               data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
-            <h5 ng-show="item.index_poly_name">{{item.index_poly_name}}</h5>
-            <div ng-show="item.file_size_ell">
-               <div>
+         <div class="listRow" ng-class-odd="'listEven'" ng-repeat="(key, items) in available.group">
+            <div ng-if="key == 'ell'">
+               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <div ng-repeat="item in items"
+                     data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.ell_url}}">
-                     <i class="fa fa-download"></i>
-                     {{item.ell_name}}
+                     <i class="fa fa-lg fa-download"></i>
                   </a>
+                  <common-cc4></common-cc4>
+                  <spam class="listItem">{{item.ell_name}}</spam>
                   <span style="float:right;width:8em">Size: {{item.file_size_ell | fileSize}}</span>
                </div>
             </div>
-            <div ng-show="item.file_size_las">
-               <div>
+            <div ng-if="key == 'las'">
+               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <div ng-repeat="item in items"
+                     data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.las_url}}">
-                     <i class="fa fa-download"></i>
-                     {{item.las_name}}
+                     <i class="fa fa-lg fa-download"></i>
                   </a>
+                  <common-cc4></common-cc4>
+                  <spam class="listItem">{{item.las_name}}</spam>
                   <span style="float:right;width:8em">Size: {{item.file_size_las | fileSize}}</span>
                </div>
             </div>
-            <div ng-show="item.file_size_ort">
-               <div>
+            <div ng-if="key == 'ort'">
+               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <div ng-repeat="item in items"
+                     data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.ort_url}}">
-                     <i class="fa fa-download"></i>
-                     {{item.ort_name}}
+                     <i class="fa fa-lg fa-download"></i>
                   </a>
+                  <common-cc4></common-cc4>
+                  <spam class="listItem">{{item.ort_name}}</spam>
                   <span style="float:right;width:8em">Size: {{item.file_size_ort | fileSize}}</span>
                </div>
             </div>
-            <div ng-show="item.file_size_asc">
-               <div>
-                  <a href="{{item.asc_url}}">
-                     <i class="fa fa-download"></i>
-                     {{item.asc_name}}
-                  </a>
-                  <span style="float:right;width:8em">Size: {{item.file_size_asc | fileSize}}</span>
+            <div ng-if="key == 'asc'">
+               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <div ng-repeat="item in items"
+                     data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
+                  <div>
+                     <a href="{{item.asc_url}}">
+                        <i class="fa fa-lg fa-download"></i>
+                     </a>
+                     <common-cc4></common-cc4>
+                     <spam class="listItem">{{item.asc_name}}</spam>
+                     <span style="float:right;width:8em">Size: {{item.file_size_asc | fileSize}}</span>
+                  </div>
+                  <div>
+                     <a href="{{item.prj_url}}">
+                        <i class="fa fa-lg fa-download"></i>
+                     </a>
+                     <common-cc4></common-cc4>
+                     <spam class="listItem">{{item.prj_name}}</spam>
+                     <span style="float:right;width:8em">Size: {{item.file_size_prj | fileSize}}</span>
+                  </div>
                </div>
             </div>
-            <div ng-show="item.file_size_prj">
-               <div>
-                  <a href="{{item.prj_url}}">
-                     <i class="fa fa-download"></i>
-                     {{item.prj_name}}
-                  </a>
-                  <span style="float:right;width:8em">Size: {{item.file_size_prj | fileSize}}</span>
-               </div>
-            </div>
-            <div ng-show="item.file_size_dem">
-               <div>
+            <div ng-if="key == 'dem'">
+               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <div ng-repeat="item in items"
+                     data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.dem_url}}">
-                     <i class="fa fa-download"></i>
-                     {{item.dem_name}}
+                     <i class="fa fa-lg fa-download"></i>
                   </a>
+                  <common-cc4></common-cc4>
+                  <spam class="listItem">{{item.dem_name}}</spam>
                   <span style="float:right;width:8em">Size: {{item.file_size_dem | fileSize}}</span>
                </div>
             </div>
