--- a/source/water/select/doc.html
+++ b/source/water/select/doc.html
@@ -7,6 +7,7 @@
 		<download-add item="doc" group="group"></download-add>
 		<common-wms data="doc"></common-wms>
 		<common-bbox data="doc" ng-if="doc.showExtent"></common-bbox>
+		<common-cc4></common-cc4>
 		<a href="http://www.ga.gov.au/metadata-gateway/metadata/record/{{doc.sysId}}" target="_blank" ><strong>{{doc.title}}</strong></a>
 	</span>
 	<span ng-class="{ellipsis:!expanded}" style="width:100%;display:inline-block;padding-right:15px;">
