Make ccby popover dismiss easier

--- a/source/common/cc4/cc4.html
+++ b/source/common/cc4/cc4.html
@@ -1,4 +1,5 @@
 <button type="button" class="undecorated" title="View CCBy 4.0 licence details"
+      popover-trigger="outsideClick"
       uib-popover-template="template" popover-placement="bottom" popover-append-to-body="true">
 	<i ng-class="{active:data.isWmsShowing}" class="fa fa-lg fa-gavel"></i>
 </button>
