--- a/source/common/cc4/cc4template.html
+++ b/source/common/cc4/cc4template.html
@@ -1,12 +1,28 @@
-<div style="width:25em;font-size:90%">
-   <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 </a>
-   <br/>
-   <i class="fa fa-check-circle-o fa-lg"></i>
-   You may use this work for commercial purposes.
-   <br/>
-   <span class="fa-stack fa-lg">
-      <i class="fa fa-circle-o fa-stack"></i>
-      <i class="fa fa-female fa-stack"></i>
-   </span>
-   You must attribute the creator in your own works.
+<div>
+   <div class="row">
+      <div class="col-md-12">
+         <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 </a>
+      </div>
+   </div>
+   <div class="row">
+      <div class="col-md-2">
+         <span class="fa-stack" aria-hidden="true">
+         <i class="fa fa-check-circle-o fa-stack-2x" aria-hidden="true"></i>
+      </span>
+      </div>
+      <div class="col-md-10">
+         You may use this work for commercial purposes.
+      </div>
+   </div>
+   <div class="row">
+      <div class="col-md-2">
+         <span class="fa-stack" aria-hidden="true">
+         <i class="fa fa-circle-o fa-stack-2x"></i>
+         <i class="fa fa-female fa-stack-1x"></i>
+      </span>
+      </div>
+      <div class="col-md-10">
+         You must attribute the creator in your own works.
+      </div>
+   </div>
 </div>
