--- a/source/icsm/select/group.html
+++ b/source/icsm/select/group.html
@@ -2,7 +2,7 @@
 	<div class="panel-heading"><icsm-wms data="group"></icsm-wms> <strong>{{group.title}}</strong></div>
 	<div class="panel-body">
    		<div ng-repeat="doc in group.docs">
-   			<select-doc doc="doc" group="group"></select-doc>
+   			<div select-doc doc="doc" group="group"></div>
 		</div>
 	</div>
 </div>
