--- a/source/icsm/list/list.html
+++ b/source/icsm/list/list.html
@@ -46,7 +46,10 @@
       <div uib-collapse="!expansions[available.source]">
          <div class="listRow" ng-class-odd="'listEven'" ng-repeat="(key, items) in available.group">
             <div ng-if="key == 'ell'">
-               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <h5>hhhhhhhhhhhh
+                  <span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span>
+                  <input type="checkbox" />
+               </h5>
                <div ng-repeat="item in items"
                      data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.ell_url}}">
@@ -58,7 +61,10 @@
                </div>
             </div>
             <div ng-if="key == 'las'">
-               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <h5>
+                  <span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span>
+                  <input type="checkbox" />
+               </h5>
                <div ng-repeat="item in items"
                      data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.las_url}}">
@@ -70,7 +76,10 @@
                </div>
             </div>
             <div ng-if="key == 'ort'">
-               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <h5>
+                  <span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span>
+                  <input type="checkbox" />
+               </h5>
                <div ng-repeat="item in items"
                      data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.ort_url}}">
@@ -82,7 +91,10 @@
                </div>
             </div>
             <div ng-if="key == 'asc'">
-               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <h5>
+                  <span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span>
+                  <input type="checkbox" />
+               </h5>
                <div ng-repeat="item in items"
                      data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <div>
@@ -104,7 +116,10 @@
                </div>
             </div>
             <div ng-if="key == 'dem'">
-               <h5><span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span></h5>
+               <h5>
+                  <span uib-tooltip="{{filetypes[key].description}}">{{filetypes[key].label}}</span>
+                  <input type="checkbox" />
+               </h5>
                <div ng-repeat="item in items"
                      data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                   <a href="{{item.dem_url}}">
