--- a/source/icsm/toolbar/toolbar.html
+++ b/source/icsm/toolbar/toolbar.html
@@ -11,17 +11,17 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="pull-right">
 			<div class="btn-toolbar radCore" role="toolbar"  icsm-toolbar>
 				<div class="btn-group">
 					<!-- < icsm-state-toggle></icsm-state-toggle> -->
 				</div>
-			</div>		
-		
+			</div>
+
 			<div class="btn-toolbar" style="margin:right:10px;display:inline-block">
 				<div class="btn-group">
-					<span class="btn btn-default" geo-baselayer-control max-zoom="16" title="Satellite to Topography bias on base map."></span>
+					<span class="btn btn-default" common-baselayer-control max-zoom="16" title="Satellite to Topography bias on base map."></span>
 				</div>
 			</div>
 		</div>
