--- a/source/water/select/select.html
+++ b/source/water/select/select.html
@@ -1,5 +1,5 @@
-<div>
-	<div style="position:relative;padding:5px;padding-left:10px;" ng-controller="SelectCtrl as select" class="scrollPanel">
+<div ng-controller="SelectCtrl as select">
+	<div style="position:relative;padding:5px;padding-left:10px;" class="scrollPanel" ng-if="!select.selected">
 		<div class="panel panel-default" style="margin-bottom:-5px">
   			<div class="panel-heading">
   				<h3 class="panel-title">Available datasets</h3>
@@ -9,7 +9,9 @@
 					<div select-doc ng-if="doc.type == 'dataset'" doc="doc"></div>
 					<select-group ng-if="doc.type == 'group'" group="doc"></select-group>
 				</div>
+				<div vector-select></div>
   			</div>
 		</div>
 	</div>
+	<div style="position:relative;padding:5px;padding-left:10px;" class="scrollPanel" ng-if="select.selected" common-item-metaview container="select"></div>
 </div>
