--- a/source/common/download/popup.html
+++ b/source/common/download/popup.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid downloadInner" >
 		<div class="row">
   			<div class="col-md-12">
-				<h4><nedf-wms data="dl.data.item"></nedf-wms>
+				<h4><common-wms data="dl.data.item"></common-wms>
 					<a href="http://www.ga.gov.au/metadata-gateway/metadata/record/{{dl.data.item.sysId}}" target="_blank"><strong class="ng-binding">{{dl.data.item.title}}</strong></a>
 				</h4>
    			</div>
