Add title to popup

--- a/source/water/vector/vector.html
+++ b/source/water/vector/vector.html
@@ -1,6 +1,7 @@
 <div class="panel panel-default" style="margin-bottom:-5px;">
    <div class="panel-heading">
 		<vector-add group="vect.group"></vector-add>
+      <common-tile data="vect.group"></common-tile>
 		<common-bbox data="vect.group"></common-bbox>
 		<common-cc4></common-cc4>
       <strong>{{vect.group.title}}</strong>
