--- a/source/water/select/group.html
+++ b/source/water/select/group.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default" style="margin-bottom:-5px;" >
-	<div class="panel-heading"><nedf-wms data="group"></nedf-wms> <strong>{{group.title}}</strong></div>
+	<div class="panel-heading"><common-wms data="group"></common-wms> <strong>{{group.title}}</strong></div>
 	<div class="panel-body">
    		<div ng-repeat="doc in group.docs">
    			<div select-doc doc="doc" group="group"></div>
