--- a/source/common/iso19115/double.html
+++ b/source/common/iso19115/double.html
@@ -2,6 +2,6 @@
 <ul ng-show="node">
    <li>
       <span class="iso19115-head">{{name | iso19115NodeName}}</span>
-      <iso19115-node name="MD_ScopeCode" node="node.hierarchyLevel.MD_ScopeCode" type="_codeListValue"></iso19115-node>
+      <iso19115-node name="name" node="node[name]" type="type"></iso19115-node>
    </li>
 </ul>
