--- a/source/common/iso19115/metadata.html
+++ b/source/common/iso19115/metadata.html
@@ -17,7 +17,8 @@
                <iso19115-node name="MD_ScopeCode" node="node.hierarchyLevel.MD_ScopeCode" type="_codeListValue"></iso19115-node>
             </li>
          </ul>
-         <iso19115-double node="node.hierarchyLevel" name="MD_ScopeCode" type="_codeListValue"></iso19115-double>
+         <iso19115-node name="hierarchyLevelName" node="node.hierarchyLevelName" type="CharacterString"></iso19115-node>
+         <iso19115-contact ng-if="node.contact" node="node.contact" key="'contact'"></iso19115-contact>
       </li>
    </ul>
 </div>
