Update header to have larger icons

--- a/source/common/header/header.html
+++ b/source/common/header/header.html
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
             <li class="hidden-xs"><a href="/"><h1 class="applicationTitle">{{heading}}</h1></a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right nav-icons">
         	<li common-navigation ng-show="username" role="menuitem" style="padding-right:10px"></li>
 			<li mars-version-display role="menuitem"></li>
 			<li style="width:10px"></li>
