--- a/source/common/header/header.html
+++ b/source/common/header/header.html
@@ -9,9 +9,14 @@
         </button>
 
         <a href="http://www.ga.gov.au" class="hidden-xs header-logo">
-            <img src="icsm/resources/img/fsdf-logo.png" alt="ANZLIC the Spatial Information Council" class="logo"></img></a>
-        <a href="http://www.ga.gov.au" class="visible-xs"><img src="icsm/resources/img/icsm-logo-sml.gif" alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="logo-stacked"></img></a>
-        <a href="/" class="appTitle visible-xs"><h1 style="font-size:120%">{{heading}}</h1></a>
+            <img src="icsm/resources/img/fsdf-logo.png" alt="ANZLIC the Spatial Information Council" class="logo"></img>
+        </a>
+        <a href="http://www.ga.gov.au" class="visible-xs">
+            <img src="icsm/resources/img/icsm-logo-sml.gif" alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="logo-stacked"></img>
+        </a>
+        <a href="/" class="appTitle visible-xs">
+            <h1 style="font-size:120%">{{heading}}</h1>
+        </a>
     </div>
     <div class="navbar-collapse collapse ga-header-collapse">
         <ul class="nav navbar-nav">
@@ -22,12 +27,6 @@
 			<li mars-version-display role="menuitem"></li>
 			<li style="width:10px"></li>
         </ul>
-        <div class="breadcrumbsContainer hidden-xs">
-            <ul class="breadcrumbs">
-                <li class="first"><a href="/">Home</a></li>
-                <li ng-class="{last:$last}" ng-repeat="crumb in breadcrumbs"><a href="{{crumb.url}}" title="{{crumb.title}}" >{{crumb.name}}</a></li>
-            </ul>
-        </div>
     </div><!--/.nav-collapse -->
 </div>
 
