--- a/source/icsm/clip/clip.html
+++ b/source/icsm/clip/clip.html
@@ -1,22 +1,26 @@
 <div class="well well-sm">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-10">
-				<strong style="font-size:120%">Select area:</strong>
-				<button ng-click="initiateDraw()" ng-disable="client.drawing" tooltip-placement="right" uib-tooltip="Enable drawing of a bounding box. On enabling, click on the map and drag diagonally"
-					class="btn btn-primary btn-default">Draw...</button>
-				<button ng-click="typing = !typing"  tooltip-placement="right" uib-tooltip="Type coordinates of a bounding box. Restricted to maximum of 2x2 degrees."
-					class="btn btn-primary btn-default">Manual entry...</button>
-			</div>
 			<div class="col-md-2">
-				<button style="float:right" ng-click="showInfo = !showInfo" tooltip-placement="left" uib-tooltip="Information." class="btn btn-primary btn-default"><i class="fa fa-info"></i></button>
-				<exp-info title="Selecting an area" show-close="true" style="width:450px;position:fixed;top:230px;right:40px" is-open="showInfo">
-					<icsm-info-bbox>
+				<strong style="font-size:120%">Select area:</strong>
 			</div>
-			</exp-info>
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-9">
+				<div class="btn-group" role="group" aria-label="...">
+					<button ng-click="initiateDraw()" ng-disable="client.drawing" tooltip-placement="bottom" uib-tooltip="Enable drawing of a bounding box. On enabling, click on the map and drag diagonally"
+						class="btn btn-primary btn-default">Draw...</button>
+					<button ng-click="typing = !typing"  tooltip-placement="bottom" uib-tooltip="Type coordinates of a bounding box. Restricted to maximum of 2x2 degrees."
+						class="btn btn-primary btn-default">Manual entry...</button>
+					<button ng-click="showInfo = !showInfo" tooltip-placement="bottom" uib-tooltip="Information." class="btn btn-primary btn-default"><i class="fa fa-info"></i></button>
+				</div>
+				<exp-info title="Selecting an area" show-close="true" style="width:450px;position:fixed;top:230px;right:40px" is-open="showInfo">
+					<icsm-info-bbox></icsm-info-bbox>
+				</exp-info>
+			</div>
 		</div>
 
-		<div class="row" ng-hide="hding">
+		<div class="row" ng-hide="!clip.xMin && clip.xMin != 0" style="padding-top:7px;">
 			<div class="col-md-12">
 				Selected {{clip.xMin|number : 4}}&deg; west, {{clip.yMax|number : 4}}&deg; north, {{clip.yMax|number : 4}}&deg; east, {{clip.xMin|number : 4}}&deg; south
 			</div>
