--- a/source/icsm/reviewing/reviewing.html
+++ b/source/icsm/reviewing/reviewing.html
@@ -24,7 +24,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="pull-right" style="padding:8px;">
-					<button type="button" class="btn btn-primary" ng-click="accept()">Start extract</button>
+					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract</button>
 					<button type="button" class="btn btn-primary" ng-click="cancel()">Cancel</button>
 				</div>
 			</div>
@@ -50,7 +50,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="pull-right" style="padding:8px;">
-					<button type="button" class="btn btn-primary" ng-click="accept()">Start extract</button>
+					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract</button>
 					<button type="button" class="btn btn-primary" ng-click="cancel()">Cancel</button>
 				</div>
 			</div>
