--- a/source/icsm/reviewing/reviewing.html
+++ b/source/icsm/reviewing/reviewing.html
@@ -20,11 +20,11 @@
 			<button type="button" style="float:right" class="btn btn-primary" ng-click="cancel()">Close</button>
 		</div>
 	</div>
-	<div ng-hide="noneSelected(products)">
+	<div ng-hide="noneSelected(products)" ng-controller="listCtrl as list">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="pull-right" style="padding:8px;">
-					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract</button>
+					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract of {{list.selected.length}} datasets (Approx: {{list.selectedSize | fileSize}})</button>
 					<button type="button" class="btn btn-primary" ng-click="cancel()">Cancel</button>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="pull-right" style="padding:8px;">
-					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract</button>
+					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract of {{list.selected.length}} datasets (Approx: {{list.selectedSize | fileSize}})</button>
 					<button type="button" class="btn btn-primary" ng-click="cancel()">Cancel</button>
 				</div>
 			</div>
