--- a/source/icsm/reviewing/reviewing.html
+++ b/source/icsm/reviewing/reviewing.html
@@ -24,7 +24,9 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="pull-right" style="padding:8px;">
-					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract of {{list.selected.length}} datasets (Approx: {{list.selectedSize | fileSize}})</button>
+					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email || !list.selected.length">Start extract of {{list.selected.length}} datasets
+                  <span ng-show="list.selectedSize">(Approx: {{list.selectedSize | fileSize}})</span>
+               </button>
 					<button type="button" class="btn btn-primary" ng-click="cancel()">Cancel</button>
 				</div>
 			</div>
@@ -37,9 +39,9 @@
 		</div>
 		<div class="row" ng-repeat="product in products | reviewProductsSelected"  ng-class-odd="'reviewing-odd'">
 			<div class="col-md-7">
-				<button type="button" class="btn btn-default btn-xs" ng-click="product.selected = false">
-            <i class="fa fa-times-circle fa-2x" aria-hidden="true"></i>
-         </button> {{product.file_name}}
+				<button type="button" class="btn btn-default btn-xs" ng-click="product.removed = !product.removed">
+            <i class="fa fa-2x" ng-class="{'fa-times-circle': !product.removed, 'fa-check-circle': product.removed}" aria-hidden="true"></i>
+         </button><span style="padding-left:7px" ng-class="{'exclude': product.removed}">{{product.file_name}}</span>
 			</div>
 			<div class="col-md-4" style="padding:6px">
 				({{product.source}}
@@ -53,7 +55,9 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="pull-right" style="padding:8px;">
-					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email">Start extract of {{list.selected.length}} datasets (Approx: {{list.selectedSize | fileSize}})</button>
+					<button type="button" class="btn btn-primary" ng-click="accept()" ng-disabled="!data.email || !list.selected.length">Start extract of {{list.selected.length}} datasets
+                  <span ng-show="list.selectedSize">(Approx: {{list.selectedSize | fileSize}})</span>
+               </button>
 					<button type="button" class="btn btn-primary" ng-click="cancel()">Cancel</button>
 				</div>
 			</div>
