--- a/source/water/vector/vector.html
+++ b/source/water/vector/vector.html
@@ -3,7 +3,7 @@
 		<vector-add group="vect.group"></vector-add>
       <common-tile data="vect.group"></common-tile>
 		<common-bbox data="vect.group"></common-bbox>
-		<common-cc4></common-cc4>
+		<common-cc></common-cc>
       <strong>{{vect.group.title}}</strong>
    </div>
    <div class="panel-body">
