--- a/source/common/cc/cc.html
+++ b/source/common/cc/cc.html
@@ -1,4 +1,4 @@
-<button type="button" class="undecorated" title="View CCBy 4.0 licence details"
+<button type="button" class="undecorated" title="View CCBy {{details.version}} licence details"
       popover-trigger="outsideClick"
       uib-popover-template="template" popover-placement="bottom" popover-append-to-body="true">
 	<i ng-class="{active:data.isWmsShowing}" class="fa fa-lg fa-gavel"></i>
