--- a/source/common/cc/cctemplate.html
+++ b/source/common/cc/cctemplate.html
@@ -1,7 +1,7 @@
 <div>
    <div class="row">
       <div class="col-md-12">
-         <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 </a>
+         <a target="_blank" ng-href="{{details.link}}">Creative Commons Attribution {{details.version}} </a>
       </div>
    </div>
    <div class="row">
