Change attribute title on an element as it was meant for a child but was rendered

--- a/source/common/toolbar/toolbar.html
+++ b/source/common/toolbar/toolbar.html
@@ -20,8 +20,8 @@
 			</div>
 
 			<div class="btn-toolbar" style="margin:right:10px;display:inline-block">
-				<div class="btn-group">
-					<span class="btn btn-default" common-baselayer-control max-zoom="16" title="Satellite to Topography bias on base map."></span>
+				<div class="btn-group" title="{{overlaytitle}}">
+					<span class="btn btn-default" common-baselayer-control max-zoom="16"></span>
 				</div>
 			</div>
 		</div>
