--- a/source/water/panes/panes.html
+++ b/source/water/panes/panes.html
@@ -1,7 +1,7 @@
 <div class="container contentContainer">
 	<div class="row icsmPanesRow" >
 		<div class="icsmPanesCol" ng-class="{'col-md-12':!view, 'col-md-7':view}" style="padding-right:0">
-			<div class="expToolbar row noPrint" icsm-toolbar-row map="root.map" title="'fred'"></div>
+			<div class="expToolbar row noPrint" icsm-toolbar-row map="root.map" ></div>
 			<div class="panesMapContainer" geo-map configuration="data.map">
 			    <geo-extent></geo-extent>
 			</div>
