Add abstract and start of getfeatureinfo

--- a/source/icsm/panes/panes.html
+++ b/source/icsm/panes/panes.html
@@ -4,6 +4,7 @@
 			<div class="expToolbar row noPrint" icsm-toolbar-row map="root.map"></div>
 			<div class="panesMapContainer" geo-map configuration="data.map">
 			    <geo-extent></geo-extent>
+			    <common-feature-info></common-feature-info>
 			</div>
     		<div geo-draw data="data.map.drawOptions" line-event="elevation.plot.data" rectangle-event="bounds.drawn"></div>
     		<div class="common-legend" common-legend map="data.map"></div>
