--- a/source/icsm/results/orgheading.html
+++ b/source/icsm/results/orgheading.html
@@ -1,5 +1,6 @@
 <h5>
-	<button class="undecorated" ng-click="expansions[org.source] = !expansions[org.source]" uib-tooltip="Click to collapse/expand this group"
+	<button class="undecorated" ng-click="expansions[org.source] = !expansions[org.source]"
+      uib-tooltip="Click to collapse/expand this group" tooltip-append-to-body="true"
 		aria-expanded="true" aria-controls="collapse{{mappings[org.source].code}}">
       <img ng-src="{{mappings[org.source].image}}" ng-attr-style="height:{{mappings[org.source].height}}px"></img>
    </button>
