--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -1,53 +1,74 @@
 <div ng-show="!list || !list.length">
-	<div class="alert alert-warning" role="alert"><strong>Select an area</strong> to find datasets within.</div>
+   <div class="alert alert-warning" role="alert"><strong>Select an area</strong> to find datasets within.</div>
 </div>
 
 <div ng-show="list.length">
-	<div class="row">
-		<div class="col-md-5" uib-tooltip="Number of intersecting or very near datasets to your area of interest.">
-			<h4 style="display:inline-block">Found {{products.length}} datasets</h4>
-		</div>
-		<div class="col-md-7">
-			<div class="input-group input-group-sm">
-				<span class="input-group-addon" id="names1">Filter:</span>
-				<input type="text" ng-model="filters.filter" class="form-control" ng-change="update()" placeholder="Filter names" aria-describedby="names1">
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-body" style="float:clear">
-		   <span style="padding:10px; float:left">
+   <div class="row">
+      <div class="col-md-5" uib-tooltip="Number of intersecting or very near datasets to your area of interest.">
+         <h4 style="display:inline-block">Found {{products.length}} datasets</h4>
+      </div>
+      <div class="col-md-7">
+         <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="names1">Filter:</span>
+            <input type="text" ng-model="filters.filter" class="form-control" ng-change="update()" placeholder="Filter names" aria-describedby="names1">
+         </div>
+      </div>
+   </div>
+   <div class="panel panel-default">
+      <div class="panel-body" style="float:clear">
+         <span style="padding:10px; float:left">
 				<span class="listTypeLabel">Filter by type:</span>
-				<span ng-repeat="type in filters.types" class="listType">
+         <span ng-repeat="type in filters.types" class="listType">
                <input type="checkbox" ng-model="type.selected" ng-change="update()"/>
                <span uib-tooltip="{{type.description}}">{{type.label}}</span>
-				</span>
-			</span>
+         </span>
+         </span>
          <span style="float:right">
             <icsm-search-continue></icsm-search-continue>
          </span>
       </div>
-	</div>
+   </div>
 
-	<div ng-repeat="available in list" class="well" style="padding-left:4px;padding-right:4px" ng-show="list.someMatches(available)" ng-controller="listCtrl as list">
+   <div ng-repeat="available in list" class="well" style="padding-left:4px;padding-right:4px" ng-show="list.someMatches(available)"
+      ng-controller="listCtrl as list">
       <icsm-org-heading org="available" expansions="expansions" mappings="mappings" products="products"></icsm-org-heading>
-		<div uib-collapse="!expansions[available.source]">
-			<div class="listRow" ng-class-odd="'listEven'" ng-repeat="(typeKey, types) in available.downloadables | allowedTypes">
-				<h5><strong>{{typeKey}}</strong></h5>
-				<div  ng-repeat="(key, items) in types">
-					<div>
-						<h5>
-							<button ng-click="list.checkChildren(items)" style="width:7em" class="btn btn-xs btn-default">
+      <div uib-collapse="!expansions[available.source]">
+         <div class="listRow" ng-class-odd="'listEven'" ng-repeat="(typeKey, types) in available.downloadables | allowedTypes">
+            <h5><strong>{{typeKey}}</strong></h5>
+            <div ng-repeat="(key, items) in types">
+               <div>
+                  <h5>
+                     <button ng-click="list.checkChildren(items)" style="width:7em" class="btn btn-xs btn-default">
                         <span ng-show="!list.childrenChecked(items)">Select all</span>
                         <span ng-show="list.childrenChecked(items)">Deselect all</span>
                   </button>
-							<strong uib-tooltip="{{filter.types[key].description}}">{{key}}</strong>
-						</h5>
-						<div ng-repeat="item in items | matchedItems" data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
-							<input type="checkbox" ng-model="item.selected" />
-							<common-cc version="mappings[item.source].ccLicence"></common-cc>
-							<spam class="listItem">{{item.file_name}}</spam>
-							<span style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
+                     <strong uib-tooltip="{{filter.types[key].description}}">{{key}}</strong>
+                  </h5>
+                  <div ng-repeat="item in items | matchedItems" icsm-abstract-hover item="item" >
+                     <div tooltip-append-to-body="true" uib-tooltip="{{item.metadata.title? item.metadata.title: 'Loading...'}}" tooltip-popup-delay="400">
+                        <input type="checkbox" ng-model="item.selected" />
+                        <icsm-abstract item="item" ng-if="item.source == 'NSW Government'"></icsm-abstract>
+                        <common-cc version="mappings[item.source].ccLicence"></common-cc>
+                        <span class="listItem">{{item.file_name}}</span>
+                        <span style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
+                     </div>
+                     <div item="item" ng-if="item.source == 'NSW Government'" ng-show="item.showAbstract" class="well">
+                        <span ng-show="!item.metadata">
+                           <i class="fa fa-spinner fa-spin fa-lg fa-fw"></i>
+                           <span>Loading metadata...</span>
+                        </span>
+                        <div ng-show="item.metadata.abstract != null">
+                           <div ng-show="item.metadata.abstract">
+                              <strong>{{item.metadata.title}}</strong> -
+                              <span class="icsm-abstract-body" ng-bind-html="item.metadata.abstractText"></span >
+                        </div>
+                        <div ng-show="item.metadata.abstract == null">
+                           <i class="fa fa-3x fa-exclamation-triangle" style="color:orange"></i>
+                           There is no abstract available for this dataset.
+                        </div>
+                     </div>
+
+                     </div>
 						</div>
 					</div>
 				</div>
