Rejig layout of reviewing panel

--- a/source/icsm/panes/panes.html
+++ b/source/icsm/panes/panes.html
@@ -5,6 +5,7 @@
 			<div class="panesMapContainer" geo-map configuration="data.map">
 			    <geo-extent></geo-extent>
 			    <common-feature-info></common-feature-info>
+			    <icsm-layerswitch></icsm-layerswitch>
 			</div>
     		<div geo-draw data="data.map.drawOptions" line-event="elevation.plot.data" rectangle-event="bounds.drawn"></div>
     		<div class="common-legend" common-legend map="data.map"></div>
