--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -53,22 +53,19 @@
                         <span class="listItem">{{item.file_name}}</span>
                         <span style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
                      </div>
-                     <div item="item" ng-if="item.source == 'NSW Government'" ng-show="item.showAbstract" class="well">
+                     <div ng-if="item.source == 'NSW Government'" ng-show="item.showAbstract" class="well">
                         <span ng-show="!item.metadata">
                            <i class="fa fa-spinner fa-spin fa-lg fa-fw"></i>
                            <span>Loading metadata...</span>
                         </span>
-                        <div ng-show="item.metadata.abstract != null">
-                           <div ng-show="item.metadata.abstract">
-                              <strong>{{item.metadata.title}}</strong> -
-                              <span class="icsm-abstract-body" ng-bind-html="item.metadata.abstractText"></span >
+                        <div ng-show="item.metadata.abstract">
+                           <strong>{{item.metadata.title}}</strong> -
+                           <span class="icsm-abstract-body" ng-bind-html="item.metadata.abstractText"></span >
                         </div>
-                        <div ng-show="item.metadata.abstract == null">
-                           <i class="fa fa-3x fa-exclamation-triangle" style="color:orange"></i>
+                        <div ng-show="!item.metadata.abstract">
+                           <i class="fa fa-lg fa-exclamation-triangle" style="color:orange"></i>
                            There is no abstract available for this dataset.
                         </div>
-                     </div>
-
                      </div>
 						</div>
 					</div>
