--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -50,7 +50,7 @@
                         <input type="checkbox" ng-model="item.selected" />
                         <icsm-abstract item="item" ng-if="item.source == 'NSW Government'"></icsm-abstract>
                         <common-cc version="mappings[item.source].ccLicence"></common-cc>
-                        <span class="listItem">{{item.file_name}}</span>
+                        <span class="listItem" item="item" icsm-abstract-link></span>
                         <span style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
                      </div>
                      <div ng-if="item.source == 'NSW Government'" ng-show="item.showAbstract" class="well">
