--- a/source/icsm/splash/splash.html
+++ b/source/icsm/splash/splash.html
@@ -21,7 +21,7 @@
             <li>Pan and zoom the map to your area of interest,</li>
             <li>Click on the "Select an area..." button to enable drawing,</li>
             <li>Click on the map, holding the button down,</li>
-            <li>Drag to a diagonal corner (not too big, there is a limit of roughly 4 square degrees)</li>
+            <li>Drag to a diagonal corner (not too big, there is a limit of roughly 2 square degrees or 200 square km))</li>
             <li>On release we will check for data within or very near your area of interest</li>
             <li>If the list is large you can filter:
                <ul>
