--- a/source/icsm/clip/clip.html
+++ b/source/icsm/clip/clip.html
@@ -21,7 +21,7 @@
 
 		<div class="row" ng-hide="!clip.xMin && clip.xMin != 0" style="padding-top:7px;">
 			<div class="col-md-12">
-				Selected {{clip.xMin|number : 4}}&deg; west, {{clip.yMax|number : 4}}&deg; north, {{clip.yMax|number : 4}}&deg; east, {{clip.xMin|number
+				Selected bounds: {{clip.xMin|number : 4}}&deg; west, {{clip.yMax|number : 4}}&deg; north, {{clip.xMax|number : 4}}&deg; east, {{clip.yMin|number
 				: 4}}&deg; south
 			</div>
 		</div>
